--- a/iap/revenuecat-integration.mdx
+++ b/iap/revenuecat-integration.mdx
@@ -26,8 +26,37 @@ ZStack() {
 
 The `ZSCheckoutButton` component integrates directly with RevenueCat's SDK and ZeroSettle's backend infrastructure to provide the following functionality:
 
-### Automatic Package Detection
 The button automatically detects and retrieves the currently selected subscription package from RevenueCat's `PaywallView`, eliminating the need for manual package state management or prop passing.
+
+## Cancellation via Customer Portal
+
+Direct users to the customer portal to manage their subscription:
+
+```swift
+import ZeroSettle
+
+Button("Manage Subscription") {
+    Task {
+        do {
+            let url = try await ZeroSettle.shared.getManagementURL(userId: currentUser.id)
+            if let url = url {
+                // Open management portal
+                UIApplication.shared.open(url)
+            }
+        } catch {
+            print("Failed to get management URL: \(error)")
+        }
+    }
+}
+```
+
+The management portal allows users to:
+- Cancel their subscription
+- Update payment methods
+- View billing history
+- Reactivate cancelled subscriptions
+
+All cancellation events are automatically synchronized between ZeroSettle and RevenueCat, ensuring consistent state across both platforms.
 
 ## Requirements
 
